[package]
name = "filter_bin"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filter_lib = { path = "../filter_lib" }
lsp-server = "0.3.2"
lsp-types = "0.74.1"
flexi_logger = "0.14.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.83"

[dependencies.serde_json]
version = "1.0.34"

[dependencies.crossbeam-channel]
version = "0.4"

[dependencies.log]
version = "0.4.3"