[package]
name = "filter_lib"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
logos-derive = "0.11.5"
lsp-server = "0.3.2"
lsp-types = "0.74.1"
flexi_logger = "0.14.0"
serde = "1.0.111"
csv = "1.1.3"

[dependencies.log]
version = "0.4.3"

